[project]
name = "velocitas-lib"
version = "0.1.0rc3"
readme = "README.md"
dependencies = [
    "requests >= 2.31.0",
    "types-requests"
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
